--- a/views/home.html
+++ b/views/home.html
@@ -7,5 +7,22 @@
 </head>
 <body>
     
+
+    <form action="/submit" method="post" >
+        <label for="fname">First Name
+            <span id="fname-err" class="err">
+                error
+            </span>
+        </label>
+        <input type="text" name="fname" id="fname">
+
+                <label for="lname">Last Name
+            <span id="lname-err" class="err">
+                error
+            </span>
+        </label>
+        <input type="text" name="lname" id="lname">
+        <button type="submit"> submit</button>
+    </form>
 </body>
 </html>
